# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "walker"
version = "0.1.0"
edition = "2021"
authors = ["FallenGameR"]

[dependencies]
clap = { version = "4", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winnt"] }
#anyhow = "1.0"
