# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "walker"
version = "0.1.0"
edition = "2021"
authors = ["FallenGameR"]

[dependencies]
clap = { version = "4", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winnt"] }
crossbeam-channel = "0.5"
threadpool = "1.0"
num_cpus = "1.0"
jwalk = "0.5"